--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -21,8 +21,10 @@
     <string name="gallery">Galeri</string>
     <string name="please_choose_image">Silakan pilih file gambar terlebih dahulu.</string>
     <string name="add_story_success">Sukses tambah cerita!</string>
-    <string name="cant_get_permission">Tidak mendapatkan permission.</string>
+    <string name="cant_get_camera_permission">Gagal mendapatkan izin kamera.</string>
+    <string name="cant_get_location_permission">Gagal mendapatkan izin lokasi.</string>
     <string name="retry">Coba Lagi</string>
     <string name="content_desc_detail_story_photo">Gambar Detail Story</string>
-
+    <string name="location_not_found">Lokasi tidak ditemukan. Coba lagi</string>
+    <string name="enable_location">Aktifkan Lokasi</string>
 </resources>
