--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,10 @@
     <string name="gallery">Gallery</string>
     <string name="please_choose_image">Please choose an image file first.</string>
     <string name="add_story_success">Success add story!</string>
-    <string name="cant_get_permission">Did not get permissions.</string>
+    <string name="cant_get_camera_permission">Did not get camera permissions.</string>
+    <string name="cant_get_location_permission">Did not get location permissions.</string>
     <string name="retry">Try Again</string>
     <string name="content_desc_detail_story_photo">Detail Story Photo</string>
+    <string name="location_not_found">Location is not found. Try Again</string>
+    <string name="enable_location">Enable Location</string>
 </resources>
